frontend/src/scss/_common.scss
@import "@/scss/_variables.scss";
@mixin base-style {

	::-webkit-scrollbar {
    width: 0px;
    background: transparent; /* make scrollbar transparent */
	}

	body {
		background-color: map-get($colors, "dark");
	}

	html, body {
		margin: 0;
		font-family: map-get($font, "main-family");
		font-size: 1em;
		min-height: 100vh;
	}

	@media (min-width: map-get($breakpoints, "medium")) {
		html, body {
			min-height: 100%;
			height: 100%
		}
	}
}


@mixin link-style {
	a.router-link-exact-active {
		text-decoration: underline;
		font-weight: bold;
		color: map-get($colors, "dark");
	}

	a {
		font-weight: bold;
		text-decoration: none;
		padding-left: 2px;
		padding-right: 2px;
		margin-left: 2px;
		margin-right: 2px;
		color: map-get($colors, "dark");
		background-color: map-get($colors, "highlight");
	}
	a:hover {
	  background-color: map-get($colors, "bright");
	}
}

@mixin nav-style {
	.user {
	  color: map-get($colors, "bright");
	  display: block;
	  position: fixed;
	  top: 0px;
	  right: 0px;
	  z-index: 300;
	  padding: 4px;
		a {font-size: 1.2em;}
	}

	.user-name {
		font-weight: bold;
	}
	.mobile-nav {
	  display: block;
	}

	@media (min-width: map-get($breakpoints, "medium")) {
		.user{
			a {font-size: 1em;}
		}
	  .mobile-nav {
	    display: none;
	  }
	}
}

